--- a/introduccion.html
+++ b/introduccion.html
@@ -7,11 +7,11 @@
 <center>
     <H1> Obsolescencia programada </H1>
 </center>
-    <H2> ¿Qu&eacute; es? </H2>
+    <H2> &iquest;Qu&eacute; es? </H2>
     <H4> La obsolescencia programada, o &quot;obsolescencia planeada&quot;, se refiere a la pr&aacute;ctica intencional de los
          fabricantes de dise&ntilde;ar productos para que tengan una vida &uacute;til limitada, con el objetivo de aumentar
          las ventas futuras a trav&eacute;s de la sustituci&oacute;n de los productos antiguos.</H4>
-    <H2> ¿C&oacute;mo afecta a los consumidores y al medio ambiente? </H2>
+    <H2> &iquest;C&oacute;mo afecta a los consumidores y al medio ambiente? </H2>
     <H4> A nivel ambiental, contribuye a la sobreexplotaci&oacute;n de recursos, la generaci&oacute;n excesiva de residuos
          y la contaminaci&oacute;n. Para los consumidores, implica mayores costos, insatisfacci&oacute;n y la presi&oacute;n constante
          por adquirir productos nuevos. </H4>
@@ -19,7 +19,7 @@
     <H4> Tiene sus ra&iacute;ces en la primera mitad del siglo XX, cuando empresas comenzaron a dise&ntilde;ar productos con
          una duraci&oacute;n de vida &uacute;til limitada, con el objetivo de aumentar las ventas al incentivar la compra
          repetida. El origen se puede ubicar en la industria automotriz en los a&ntilde;os 20, con ejecutivos como
-         Alfred P. Sloan de General Motors buscando que los clientes cambiaran sus veh&iacute;culos por los modelos más
+         Alfred P. Sloan de General Motors buscando que los clientes cambiaran sus veh&iacute;culos por los modelos mÃ¡s
          recientes, aunque los anteriores a&uacute;n funcionaran. A partir de ah&iacute;, el concepto se extendi&oacute; a otros
          sectores, como la electr&oacute;nica y la industria de la moda, donde se implementaron estrategias para que los
          productos se deterioren o se vuelvan anticuados en un tiempo determinado, impulsando as&iacute; el consumo. </H4>
