--- a/tipos.html
+++ b/tipos.html
@@ -11,7 +11,7 @@
     <H3> Dispositivos que se vuelven in&uacute;tiles por actualizaciones o cambios en las especificaciones. </H3>
     <H2> Obsolescencia de calidad: </H2>
     <H3> Productos dise&ntilde;ados para fallar despu&eacute;s de un tiempo determinado. </H3>
-    <H2> Obsolescencia psicológica: </H2>
+    <H2> Obsolescencia psicol&oacute;gica: </H2>
     <H3> Productos que pierden su atractivo debido a la moda o a la aparici&oacute;n de nuevas tendencias. </H3>
     <H2> Otras formas: </H2>
     <H3> Obsolescencia sist&eacute;mica, percibida, fechada, legal, y productos no reparables. </H3>
