--- a/consecuencias.html
+++ b/consecuencias.html
@@ -20,7 +20,7 @@
   </ul>
      </H2>
      
-     <H2> Video "La obsolescencia programada y el consumismo | Retina" </H2>
+     <H2> Video &ldquo;La obsolescencia programada y el consumismo - Retina&rdquo; </H2>
      <H3>
         <a href="https://www.youtube.com/watch?v=zz-61eHzO1w" target="_blank">
           <img src="https://img.youtube.com/vi/zz-61eHzO1w/hqdefault.jpg" alt="Ver video" width="560">
