--- a/alternativas.html
+++ b/alternativas.html
@@ -20,21 +20,21 @@
 
     <form><H3>
      <!-- Pregunta 1 -->
-      <label>1. ¿Qu&eacute; deber&iacute;amos hacer antes de desechar un dispositivo?</label><br>
+      <label>1. &iquest;Qu&eacute; deber&iacute;amos hacer antes de desechar un dispositivo?</label><br>
       <input type="radio" name="q1" value="reparar"> Intentar repararlo<br>
       <input type="radio" name="q1" value="reemplazar"> Reemplazarlo inmediatamente<br>
       <input type="radio" name="q1" value="donar"> Donarlo o venderlo<br><br>
 
      <!-- Pregunta 2 -->
-      <label>2. ¿Qu&eacute; es mejor al comprar un nuevo producto?</label><br>
+      <label>2. &iquest;Qu&eacute; es mejor al comprar un nuevo producto?</label><br>
       <input type="radio" name="q2" value="marca"> Comprar por marca<br>
       <input type="radio" name="q2" value="durabilidad"> Buscar durabilidad y facilidad de reparaci&oacute;n<br>
       <input type="radio" name="q2" value="moda"> Seguir las tendencias de moda<br><br>
 
      <!-- Pregunta 3 -->
-      <label>3. ¿Qu&eacute; acci&oacute;n ayuda más a reducir la obsolescencia programada?</label><br>
+      <label>3. &iquest;Qu&eacute; acci&oacute;n ayuda mÃ¡s a reducir la obsolescencia programada?</label><br>
      <select name="q3">
-      <option value="ninguna">Selecciona una opción</option>
+      <option value="ninguna">Selecciona una opciÃ³n</option>
       <option value="legislacion">Apoyar leyes que obliguen a fabricantes a ofrecer repuestos</option>
       <option value="informarse">Investigar antes de comprar</option>
       <option value="reciclaje">Participar en programas de reciclaje</option>
