--- a/encabezado.html
+++ b/encabezado.html
@@ -3,12 +3,12 @@
   <title> Encabezado </title>
  </head>
 <center>
- <header style="background: #B1CCC4; padding: 20px; text-align: center; top: 0;">
+ <header style="background: #B1CCC4; padding: 20 px; text-align: center; top: 0;">
   <h1>Colegio de Bachilleres</h1>
   <p>Cruz Reyes Ximena - Caballero Hernandez Samantha</p>
 </header>
 </center>
-  <body style="background-color:#E1E6D3">
+  <body style="background-color:#B1CCC4">
   </body>
 
 
